update to missing

--- a/missing.html
+++ b/missing.html
@@ -83,6 +83,7 @@ img {
 <li><a href="#make-some-data-mar-you-can-skip-this-data-step-at-first"><span class="toc-section-number">0.4</span> Make some data MAR (you can skip this data step at first)</a><ul>
 <li><a href="#sas-2"><span class="toc-section-number">0.4.1</span> SAS</a></li>
 <li><a href="#r-2"><span class="toc-section-number">0.4.2</span> R</a></li>
+<li><a href="#r-annotation"><span class="toc-section-number">0.4.3</span> R, annotation</a></li>
 </ul></li>
 <li><a href="#look-at-data-now-with-missingness"><span class="toc-section-number">0.5</span> Look at data, now with missingness</a><ul>
 <li><a href="#sas-3"><span class="toc-section-number">0.5.1</span> SAS</a></li>
@@ -309,6 +310,9 @@ run;
     int2 = -log(1/ep2-1) - log(5)*edelta
     int3 = -log(1/ep3-1) - log(5)*eidu
     int4 = -log(1/ep4-1)</code></pre>
+</div>
+<div id="r-annotation" class="section level3">
+<h3><span class="header-section-number">0.4.3</span> R, annotation</h3>
 <p>Set-up for missing data:</p>
 <ul>
 <li><strong>Pattern 2</strong>:
